# claude-web

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  WEB_AUTOMATION_GUIDE.md  analyze_website.py  browser.py  find_by_text.py  install.sh  outline.md  pyproject.toml  requirements.txt  tools.json  web_action_tool.py  web_tool.py
.claude/skills/web/: SKILL.md
RealEval/: evaluate_task.py  tasks.py
bench/: dynamic.html  long_form.html  page.html  run.py
clone/: CLONING_PROTOCOL.md  VIDEO_WEBSITE_GUIDE.md  website_cloner.py
clone/car_assets/: car-animation-example.html  car-assets-findings.md  professional-uber-waiting.html
clone/realevals/: index.html
docs/: dropdown_navigation.md  element_debugging.md  form_input_corruption.md  task_completion_verification.md
document/: browser_actions.py
example/: evaluate_task.py  tasks.py
tests/: test_paste.py
tools/: WEB_AGENT_GUIDE.md  __init__.py  browser.py  browser_actions.py  cli.py  gen_01_improvement.md  gen_02_improvement.md  gen_03_improvement.md  gen_04_improvement.md  gen_05_improvement.md  gen_06_improvement.md  gen_07_improvement.md  gen_08_improvement.md  gen_09_improvement.md  gen_10_improvement.md  pyproject.toml  site_crawler.py  tools.json  web_tool.py
web_agent/: __init__.py  batch.py  cli.py  errors.py
web_agent/inspector/: __init__.py  act.py  handle.py  query.py  snapshot.py  store.py
web_agent/primitives/: dom.py
web_agent/scraper/: __init__.py  crawl.py  extract.py  fetch.py  jina.py  jobs.py  worker.py
web_agent/tools/: AGENTS.md  manifest.json
web_agent/transport/: __init__.py  cdp.py
