[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-web-agent"
version = "0.1.0"
description = "Simple web automation for Claude Code - Convert any Claude instance into a web agent with one command"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude Web Team"}
]
keywords = ["claude", "web-automation", "browser-automation", "cdp", "chrome"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "websocket-client>=1.0.0",
]

[project.optional-dependencies]
full = [
    "agisdk==0.2.0",
    "anthropic==0.57.1",
    "beautifulsoup4==4.13.4",
    "fastapi==0.116.0",
    "gymnasium==1.2.0",
    "httpx==0.28.1",
    "lxml==6.0.0",
    "numpy==2.3.1",
    "openai==1.93.2",
    "pillow==11.3.0",
    "playwright==1.53.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "ray==2.47.1",
    "selenium==4.34.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "uvicorn==0.35.0",
    "webdriver-manager==4.0.2",
    "websockets==15.0.1",
]

[project.scripts]
web-agent = "tools.cli:main"
claude-web = "tools.cli:main"

[project.urls]
Homepage = "https://github.com/agi-inc/claude-web"
Repository = "https://github.com/agi-inc/claude-web"
Documentation = "https://github.com/agi-inc/claude-web#readme"

[tool.setuptools.packages.find]
include = ["tools*"]
