[project]
name = "claude-web"
version = "0.1.0"
description = "CDP-driven browser agent with a queryable DOM inspector."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "websocket-client>=1.6",
    "rich>=13.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "selectolax>=0.3.21",
]

[project.scripts]
web-agent = "web_agent.cli:main"
webagent = "web_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_agent"]
